--- a/style.css
+++ b/style.css
@@ -1,8 +1,309 @@
 
 
+
+*{
+  margin:0; padding:0;
+  box-sizing: border-box;
+  outline: none; border:none;
+  text-decoration: none;
+  text-transform: capitalize;
+  transition: all .2s linear;
+}
+
+html{
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+body{
+  font-size: 70%;
+  background:#eee;
+}
+
+section{
+  padding:2rem 9%;
+  min-height: 100vh;
+}
+.btn{
+  display: inline-block;
+  margin-top: 1rem;
+  padding:.8rem 3rem;
+  background:#222;
+  color:#fff;
+  font-size: 1.7rem;
+  cursor: pointer;
+}
+
+.btn:hover{
+  background:var(--pink);
+  letter-spacing: .2rem;
+}
+.heading{
+  text-align: center;
+  padding-bottom: 2rem;
+  font-size: 6rem;
+  text-transform: uppercase;
+  color:#222;
+}
+
+.heading span{
+  text-transform: uppercase;
+  color:var(--green);
+}
+#particles-js{
+  position: absolute;
+  top:0; left:0;
+  height:100%;
+  width:100%;
+}
+
+.about .row{
+  display: flex;
+  flex-wrap: wrap;
+  gap:1.5rem;
+  align-items: center;
+}
+
+.about .row .image{
+  text-align: center;
+  flex:1 1 25rem;
+}
+
+.about .row .image img{
+  width:30rem;
+  border-radius: .5rem;
+  border:1rem solid #fff;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,0.07);
+}
+
+.about .row .content{
+  flex:1 1 55rem;
+}
+
+.about .row .content h3{
+  color:#222;
+  font-size: 4rem;
+}
+
+.about .row .content h3 span{
+  color:var(--pink);
+}
+
+.about .row .content .info{
+  color:#333;
+  font-size: 1.7rem;
+  padding:1rem 0;
+  line-height: 2;
+}
+
+.about .row .content .box-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap:1.5rem;
+  padding:1rem 0;
+}
+
+.about .row .content .box-container .box{
+  flex:1 1 20rem;
+}
+
+.about .row .content .box-container .box p{
+  font-size: 1.7rem;
+  color:#222;
+  padding:.5rem 0;
+  line-height: 2;
+}
+
+.about .row .content .box-container .box p span{
+  color:var(--pink);
+}
+
+.services .box-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap:1.5rem;
+}
+
+.services .box-container .box{
+  flex:1 1 30rem;
+  border-radius: .5rem;
+  background:#fff;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+  padding:2rem;
+  text-align: center;
+}
+
+.services .box-container .box i{
+  color:var(--pink);
+  font-size: 5rem;
+  padding:1rem 0;
+}
+
+.services .box-container .box h3{
+  color:#222;
+  font-size: 2.5rem;
+  padding-top:1rem;
+}
+
+.services .box-container .box p{
+  color:#333;
+  font-size:1.7rem;
+  padding:1rem 0;
+  line-height: 2;
+}
+
+.portfolio .box-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap:1.5rem;
+}
+
+.portfolio .box-container .box{
+  flex:1 1 30rem;
+  border-radius: .5rem;
+  border:1rem solid #fff;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+  position: relative;
+  overflow:hidden;
+  height:25rem;
+}
+
+.portfolio .box-container .box img{
+  height: 100%;
+  width:100%;
+  object-fit: cover;
+}
+
+.portfolio .box-container .box .content{
+  height: 100%;
+  width:100%;
+  position: absolute;
+  top:0; left:-100%;
+  background:#fff9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.portfolio .box-container .box:hover .content{
+  left:0;
+}
+
+.blogs .box-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap:1.5rem;
+}
+
+.blogs .box-container .box{
+  flex: 1 1 30rem;
+  border-radius: .5rem;
+  background:#fff;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+  padding:2rem;
+}
+
+.blogs .box-container .box img{
+  height:20rem;
+  width:100%;
+  border-radius: .5rem;
+  object-fit: cover;
+}
+
+.blogs .box-container .box h3{
+  color:var(--pink);
+  font-size: 2.5rem;
+  padding:.5rem 0;
+}
+
+.blogs .box-container .box p{
+  color:#666;
+  font-size: 1.5rem;
+  padding:.5rem 0;
+}
+
+.contact .row{
+  display:flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap:1.5rem;
+}
+
+.contact .row .image{
+  flex:1 1 40rem;
+}
+
+.contact .row .image img{
+  width: 100%;
+}
+
+.contact .row form{
+  flex:1 1 40rem;
+  padding:1rem 2rem;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+  border-radius: .5rem;
+  background:#fff;
+}
+
+.contact .row form .inputBox{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contact .row form .inputBox input,
+.contact .row form .box,
+.contact .row form textarea{
+  width:100%;
+  border-radius: .5rem;
+  font-size: 1.7rem;
+  color:#333;
+  padding:1rem;
+  margin:1rem 0;
+  border:.1rem solid rgba(0,0,0,.1);
+  text-transform: none;
+}
+
+.contact .row form .inputBox input:focus,
+.contact .row form .box:focus,
+.contact .row form textarea:focus{
+  border-color: var(--pink);
+}
+
+.contact .row form .inputBox input{
+  width:49%;
+}
+
+.contact .row form textarea{
+  height:20rem;
+  resize: none;
+}
+
+.contact .row form .btn{
+  margin:.5rem 0;
+}
+
+
+
+
+
+
+
+
+/* ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+
+
+
+
+
+
+
+
 :root {
   font-size: 16px;
   font-family: 'Open Sans';
+  --pink:#ff7eee;
   --text-primary: #b6b6b6;
   --text-secondary: #ececec;
   --bg-primary: #23232e;
@@ -226,6 +527,7 @@ li i{
   height: 100vh;
 }
 
+
 .big-text {
   padding: 0rem 1rem 2rem 1rem;
   position: absolute;
@@ -261,6 +563,7 @@ li i{
   background: black;
   background-size: cover;
   position: fixed;
+  overflow: hidden;
   top: 0;
   left: 0;
   width: 100%;
@@ -296,7 +599,7 @@ li i{
   transform: translateY(100%);
   display: inline-block;
 }
-
+/* 
 .about-text{
   display: flex;
   justify-content: center;
@@ -339,24 +642,7 @@ z-index: -1;
 
 .contact p{
   font-size:3rem;
-}
-
-.menu-icon{
-  display: none;
-  border: none;
-  background: none;
-}
-
-.menu-close-icon{
-  display: none;
-  border: none;
-  background: none;
-  position: fixed;
-  top: 2%;
-  left: -0.4%;
-  color: white;
-}
-
+} */
 footer{
   text-align: center;
   padding: 3px;
@@ -508,6 +794,11 @@ footer h1{
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+
+  html{
+    font-size: 55%;
+}
+
     .big-text{
     font-size: 3.3rem;
   }
@@ -636,3 +927,33 @@ footer h1{
   } */
 
   /* } */
+
+  /* media queries  */
+@media (max-width:991px){
+
+
+  body{
+      padding-right: 0;
+  }
+  section{
+      padding:2rem;
+  }
+
+
+}
+
+@media (max-width:450px){
+
+
+  html{
+    font-size: 50%;
+}
+  .heading{
+      font-size: 4rem;
+  }
+
+  .contact .row form .inputBox input{
+      width:100%;
+  }
+
+}
