--- a/style.css
+++ b/style.css
@@ -440,7 +440,6 @@ html {
   scroll-behavior: smooth;
 }
 .landing {
-  min-height: 100vh;
   /* background: linear-gradient(to left, #FFFFFF , #DFDFDF); */
   background-color: white;
   background-size: cover;
@@ -671,7 +670,7 @@ footer h1{
   }
   .navbar {
     bottom: 0;
-    width: 100vw;
+    width: 100%;
     height: 5rem;
   }
 
@@ -703,6 +702,10 @@ footer h1{
 
   footer h1{
     font-size: 1.3rem;
+  }
+
+  .about .row .image img{
+    width: 20rem;
   }
 }
 
@@ -946,10 +949,14 @@ footer h1{
 
 
   html{
-    font-size: 50%;
+    font-size: 20%;
 }
   .heading{
       font-size: 4rem;
+  }
+
+  .main-content{
+    margin-left: 0rem;
   }
 
   .contact .row form .inputBox input{
